--- a/app/views/user_keys/show_partials/_documentation.html.erb
+++ b/app/views/user_keys/show_partials/_documentation.html.erb
@@ -16,7 +16,7 @@
   <p> All requests to The Bridge API need to be <code>POST</code> requests with two
       header fields: <code>andrew_id</code> and <code>api_key</code>. Requests follow the same syntax
       as the <a href="http://support.collegiatelink.net/hc/en-us/articles/204033994-Documentation-for-Web-Services-API-Version-2-0-">CollegiateLink API</a>.
-      Only specific endopints and combinations of parameters are allowed for specific keys, however, as determined by the Student Activities Office. You
+      Only specific endpoints and combinations of parameters are allowed for specific keys, however, as determined by the Student Activities Office. You
       can check the set of allowed permissions and parameters for your API key by clicking on the above "Permissions" tab.
   </p>
   <p> The base URL for making API calls is: <code><%= "#{root_url + 'api/v1/'}" %></code></p>
