Major additions to express app. Just need to set up selecting of data/filters then tie it in to controller

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,9 +15,11 @@
 @import "bourbon";
 @import "foundation_and_overrides";
 @import "foundation-icons/foundation-icons";
+@import "foundation-datepicker";
 @import "vars";
 @import "layout";
 @import "user_keys";
+@import "express_app";
 
 .checkbox_panel {
   @extend .panel;
