--- a/app/assets/stylesheets/express_app.scss
+++ b/app/assets/stylesheets/express_app.scss
@@ -9,4 +9,17 @@
   #requester-type-additional:not(.hide) {
     display: inline;
   }
+
+}
+
+.columns-table {
+  td {
+    vertical-align: middle;
+    line-height: 1rem;
+    input { margin: 0; }
+    &:nth-child(1) { width: 3%; }
+    &:nth-child(2) { width: 12%; }
+    &:nth-child(3) { width: 35%; }
+    &:nth-child(4) { width: 50%; }
+  }
 }
