Get express app post'ing

--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -25,7 +25,7 @@
 
     <% end %>
       <li class="<%= 'active' if cName == 'user_keys' && aName == 'express' %>">
-        <%= link_to "Express App", express_path %>
+        <%= link_to "Express App", express_app_path %>
       </li>
   <% end %>
 </ul>
