--- a/app/views/user_keys/form_partials/_express_questions.html.erb
+++ b/app/views/user_keys/form_partials/_express_questions.html.erb
@@ -1,48 +1,50 @@
 <%= f.fields_for :express_app do |express_app| %>
-  <fieldset id="express-app-fields">
-    <legend>Application</legend>
-    <ol>
-      <li>
-        This application is being submitted on behalf of a
-        <%= express_app.select(:requester_type,
-              ExpressApp.requester_types.keys.map { |k| [t("requester_types.#{k}.title"), k] },
-              include_blank: true)
-        %>
-        <div id="requester-type-additional" class="hide">
-          &nbsp;<span></span>:&nbsp;
-          <%= express_app.text_field(:requester_additional_info) %>
-        </div>
-      </li>
-      <li>
-        In a sentence or two, describe the goal of your project and how the data you are requesting will be used.
-        <%= express_app.text_area :reasoning, rows: 5, placeholder: "e.g. We are looking to create a mobile app that showcases events happening on campus based on the user's current location. We'd like to use the Bridge API to collect the most up-to-date information on organization's events on campus. The project is for our course XX-XXX and will culminate with a final presentation at the end of this semester." %>
-      </li>
-      <li>
-        Access to student data can only be provisioned for short periods of time. Select your target end date for this project here, up to 5 months from now.
-        <br>
-        <em>*If longer term access is needed at the end of this period, a regular API application can be submitted when necessary.</em>
-        <br>
-        <%= f.date_field :time_expired, order: [:month, :day, :year], min_date: Date.today, max_date: Date.today + 5.months %>
-      </li>
-      <li>
-        Please select all Endpoints and columns that you will need access to:
-        <br>
-        <% ExpressApp::WHITELIST_COLUMNS.keys.map(&:to_s).each do |endpoint| %>
-          <span class="button secondary" data-endpoint="<%= endpoint %>" data-reveal-id="whitelist-picker"><%= endpoint.humanize %></span>
-        <% end %>
-      </li>
-      <li>
-        Check below to certify that you agree to the following:
-        <ul>
-          <li>I've read and agree to abide by the <a href="#">Terms of Service</a>.</li>
-          <li>I pledge to keep the data accessed via The Bridge API secure and to myself.</li>
-          <li>I understand that any acts in violation of this agreement will be reported as a <a href="http://www.cmu.edu/student-affairs/theword/comm_standards/standards.html">Community Standards</a> violation.</li>
-        </ul>
-        <br>
-        <%= express_app.check_box :tos_agree %> Check here to certify that you've read the Terms of Service and pledge to keep the data accessed via The Bridge API secure and to yourself.
-      </li>
-    </ol>
-  </fieldset>
+  <ol id="express-app-fields">
+    <li>
+      <%= express_app.label(:name) { "<b>Application Name</b>".html_safe } %>
+      <%= f.text_field(:name, placeholder: "Something short but relevant.", size: 24) %>
+    </li>
+    <li>
+      <%= express_app.label(:requester_type) { "<b>This application is being submitted on behalf of a</b>".html_safe } %>
+      <%= express_app.select(:requester_type,
+            ExpressApp.requester_types.keys.map { |k| [t("requester_types.#{k}.title"), k] },
+            include_blank: true)
+      %>
+      <div id="requester-type-additional" class="hide">
+        &nbsp;<span></span>:&nbsp;
+        <%= express_app.text_field(:requester_additional_info) %>
+      </div>
+    </li>
+    <li>
+      In a sentence or two, <b>describe the goal of your project</b> and how the data you are requesting will be used.
+      <%= express_app.text_area :reasoning, rows: 5, placeholder: "e.g. We are looking to create a mobile app that showcases events happening on campus based on the user's current location. We'd like to use the Bridge API to collect the most up-to-date information on organization's events on campus. The project is for our course XX-XXX and will culminate with a final presentation at the end of this semester." %>
+    </li>
+    <li>
+      Access to student data can only be provisioned for short periods of time. <b>Select your target end date</b> for this project here, up to 5 months from now.
+      <br>
+      <em style="font-size:0.7rem;">*If longer term access is needed at the end of this period, a regular API application can be submitted when necessary.</em>
+      <br>
+      <%= f.date_field :time_expired, order: [:month, :day, :year], min_date: Date.today, max_date: Date.today + 5.months %>
+    </li>
+    <li>
+      Please <b>select all API endpoints and columns</b> that you will need access to:
+      <br>
+      <% ExpressApp::WHITELIST_COLUMNS.keys.map(&:to_s).each do |endpoint| %>
+        <span class="button secondary whitelist-engage" data-endpoint="<%= endpoint %>" data-reveal-id="whitelist-picker"><%= endpoint.humanize %></span>
+      <% end %>
+    </li>
+    <li>
+      Check below to <b>certify that you agree</b> to the following:
+      <ul>
+        <li>I've read and agree to abide by the <a href="#">Terms of Service</a>.</li>
+        <li>I pledge to keep the data accessed via The Bridge API secure and to myself.</li>
+        <li>I understand that any acts in violation of this agreement will be reported as a <a href="http://www.cmu.edu/student-affairs/theword/comm_standards/standards.html">Community Standards</a> violation.</li>
+      </ul>
+      <br>
+      <%= express_app.check_box :tos_agree %>
+      <%= express_app.label :tos_agree, "Check here to certify that you've read the Terms of Service and pledge to keep the data accessed via The Bridge API secure and to yourself." %>
+    </li>
+  </ol>
 <% end %>
 
 <div id="whitelist-picker" class="reveal-modal" data-reveal aria-labelled-by="whitelist-picker-title" aria-hidden="true" role="dialog">
@@ -60,9 +62,9 @@
         <tr data-checkbox-id="user_keys_column_ids_<%= column.id %>">
           <td>
             <%= hidden_field_tag "user_key[column_ids][]" %>
-            <%= check_box_tag "user_key[column_ids][]", column.id, @user_key.columns.include?(column), id: "user_keys_column_ids_#{column.id}" %>
+            <%= check_box_tag "user_key[column_ids][]", column.id, @user_key.columns.include?(column), id: "user_keys_column_ids_#{column.id}", "data-endpoint" => endpoint %>
           </td>
-          <td><%= col_name.underscore.humanize.titleize %></td>
+          <td><%= col_name.underscore.humanize.titleize + (col_name.last(2) == "Id" ? " ID" : "")%></td>
           <td><%= t("columns.#{endpoint}.#{col_name}.description") %></td>
           <td><%= t("columns.#{endpoint}.#{col_name}.example") %></td>
         </tr>
@@ -100,7 +102,16 @@
       $(".columns-table tr").click(function (e) {
         if (e.target.tagName.toLowerCase() === "input") return;
         var checkbox = $("#" + $(this).data("checkbox-id"));
-        checkbox.prop("checked", !checkbox.prop("checked"));
+        checkbox
+          .prop("checked", !checkbox.prop("checked"))
+          .trigger("change");
+      });
+
+      $(".columns-table input").change(function (e) {
+        var endpoint = $(this).data("endpoint");
+        $(".whitelist-engage[data-endpoint='"+endpoint+"']")
+          .toggleClass("success",
+            $("#"+endpoint+"-columns-table input:checked").length > 0);
       });
 
     });
