--- a/app/assets/stylesheets/express_app.scss
+++ b/app/assets/stylesheets/express_app.scss
@@ -1,4 +1,8 @@
 #express-app-fields {
+  > li { margin-bottom: 5px; }
+
+  label,
+  #user_key_name,
   #user_key_express_app_attributes_requester_type,
   #user_key_express_app_attributes_requester_additional_info,
   #user_key_time_expired {
@@ -18,8 +22,8 @@
     line-height: 1rem;
     input { margin: 0; }
     &:nth-child(1) { width: 3%; }
-    &:nth-child(2) { width: 12%; }
-    &:nth-child(3) { width: 35%; }
-    &:nth-child(4) { width: 50%; }
+    &:nth-child(2) { width: 17%; }
+    &:nth-child(3) { width: 40%; }
+    &:nth-child(4) { width: 40%; }
   }
 }
