--- a/app/views/user_keys/form_partials/_application_text.html.erb
+++ b/app/views/user_keys/form_partials/_application_text.html.erb
@@ -1,20 +1,8 @@
-
-<div class="row">
-  <div class="s5">
-    <strong>(Required)</strong> Application Name
-    <%= f.text_field :name %>
-    <small>
-    This is the name that will be used to refer to your application and API key.
-    </small>
-  </div>
-</div>
-
-<br/>
-
 <ol>
-  
+  <%= render partial: 'user_keys/form_partials/common_form_items', locals: {f: f} %>
+
   <%= f.fields_for :answers do |answer_form| %>
-  
+
       <%# answer_form.options[:child_index] is the index of the object in params attributes. %>
       <%# If the answer has already been created, use that answer's question. %>
       <%# Otherwise, this index is used as the index to the @questions list to maintain the right ordering of the answers.%>
@@ -24,7 +12,7 @@
         <%= markdown((question.required ? "**Required** " : "") + question.message) %>
         <%= answer_form.text_area :message, rows: "8" %>
       </li>
-      
+
   <% end %>
-    
+
 </ol>
