--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -11,7 +11,7 @@
         <%= link_to "Users", users_path %>
       </li>
 
-      <li class="<%= 'active' if cName == 'user_keys' && aName != 'own_user_keys' %>">
+      <li class="<%= 'active' if cName == 'user_keys' && aName != 'own_user_keys' && aName != 'express' %>">
         <%= link_to "User Keys", user_keys_path %>
       </li>
 
